5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1644_2447.log
== TEST (2019-04-13 19:14:38) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	resultado = ("Falta ", preco - pagamento)
else:
	resultado = ("Troco de ", pagamento - preco)
	
print (round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print (round(resultado,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:15:18) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	resultado = ("Falta ", preco - pagamento)
else:
	resultado = ("Troco de ", pagamento - preco)
	
print round(resultado,2)
-- ERROR:
File "XXXX", line 9
    print round(resultado,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:15:38) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	resultado = ("Falta ", preco - pagamento)
else:
	resultado = ("Troco de ", pagamento - preco)
	
print (round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print (round(resultado,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:16:10) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	resultado = "Falta " + preco - pagamento
else:
	resultado = "Troco de " + pagamento - preco
	
print (round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    resultado = "Falta " + preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:17:26) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	resultado = 'Falta ' + (preco - pagamento)
else:
	resultado = 'Troco de ' + (pagamento - preco)
	
print (round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    resultado = 'Falta ' + (preco - pagamento)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:17:32) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	resultado = 'Falta ' + (preco - pagamento)
else:
	resultado = 'Troco de ' + (pagamento - preco)
	
print (round(resultado,2))
-- EXECUTION TIME:
0.141732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 5, in <module>
    resultado = 'Falta ' + (preco - pagamento)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:20:02) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	x = preco - pagamento
	resultado = "Falta ", x
else:
	resultado = 'Troco de ' + (pagamento - preco)
	
print (round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print (round(resultado,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:20:32) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	x = preco - pagamento
	resultado = "Falta ", x
else:
	resultado = 'Troco de ' + (pagamento - preco)
	
print (resultado)
-- OUTPUT:
('Falta ', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:21:01) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ', x
else:
	resultado = 'Troco de ' + (pagamento - preco)
	
print (resultado)
-- OUTPUT:
('Falta ', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:21:26) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	resultado = 'Troco de ' + (pagamento - preco)
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    resultado = 'Falta ' + x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:22:15) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    resultado = 'Falta ' + x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:23:28) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
x,y,resultado = float

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x,y,resultado = float
TypeError: 'type' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:24:21) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
float = x,y,resultado

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    float = x,y,resultado
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:24:38) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
float = x,y,resultado

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    float = x,y,resultado
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:24:39) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
float = x,y,resultado

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- EXECUTION TIME:
0.131356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 3, in <module>
    float = x,y,resultado
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:44:21) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
float = x,y,resultado

if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    float = x,y,resultado
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:46:30) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))


if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + x
else:
	y = pagamento - preco
	resultado = 'Troco de ' + y
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    resultado = 'Falta ' + x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:48:30) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))


if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + (x)
else:
	y = pagamento - preco
	resultado = 'Troco de ' + (y)
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    resultado = 'Falta ' + (x)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:49:06) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
resultad0 = float


if preco > pagamento:
	x = preco - pagamento
	resultado = 'Falta ' + (x)
else:
	y = pagamento - preco
	resultado = 'Troco de ' + (y)
	
print (resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    resultado = 'Falta ' + (x)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:51:57) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
resultad0 = float


if preco > pagamento:
	x = preco - pagamento
	print ('Falta ' + x)
else:
	y = pagamento - preco
	print('Troco de ' + y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print ('Falta ' + x)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:58:56) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
resultad0 = float


if preco > pagamento:
	x = preco - pagamento
	print ("Falta ",x)
else:
	y = pagamento - preco
	print("Troco de ",y)
	
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:59:55) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
resultad0 = float


if preco > pagamento:
	x = preco - pagamento
	print ("Falta ",round(x,2))
else:
	y = pagamento - preco
	print("Troco de ",round(y,2)
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:00:12) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
resultad0 = float


if preco > pagamento:
	x = preco - pagamento
	print ("Falta ",round(x,2))
else:
	y = pagamento - preco
	print("Troco de ",round(y,2))
	
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:00:31) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))
resultad0 = float


if preco > pagamento:
	x = preco - pagamento
	print ("Falta ",round(x,2))
else:
	y = pagamento - preco
	print("Troco de ",round(y,2))
	
-- EXECUTION TIME:
0.16884
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
